# One-Haut-Encoded.github.io

./: .gitattributes  .gitignore  Dockerfile  NextSteps.md  README.md  app.js  curated_items.json  index.html  main.py  precomputed_recommendations.json  pyproject.toml  requirements.txt  style.css
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: pr-checks.yml  sync-to-hub.yml
backend/: __init__.py  app.py  inference.py  main.py  paths.py  requirements.txt
backend/scripts/: train_baseline.py
notebooks/: 01_eda.ipynb
scripts/: build_features.py  build_resized_image_bucket.py  download_from_hf.py  e2e_local_test.sh  evaluate.py  extract_image_features.py  subsample.py  sync_demo_images_to_hf.py  train_knn.py  train_ncf.py
writeup/: .gitignore
