# AI-assisted (Cursor) -- https://cursor.com
[project]
name = "onehautencoded-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.10.1",
    "ipykernel>=6.25",
    "jupyter>=1.0",
    "kaggle>=1.5",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "seaborn>=0.12",
    "torch>=2.0",
    "torchvision>=0.15",
    "wordcloud>=1.9",
]
